--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,6 @@ flutter:
 
   assets:
     - assets/
-    - assets/logo.jpg
+    - assets/logo.png
     # - assets/logo.png
     - assets/rummy.png
